@@ -5,10 +5,7 @@ ENLIGHTENMENT_MINOR=16
 ENLIGHTENMENT_MICRO=6
 ENLIGHTENMENT_VERSION=$ENLIGHTENMENT_MAJOR.$ENLIGHTENMENT_MINOR.$ENLIGHTENMENT_MICRO
 
-VERSION=$ENLIGHTENMENT_VERSION
-PACKAGE=enlightenment
-
-AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
+AM_INIT_AUTOMAKE(enlightenment, $ENLIGHTENMENT_VERSION)
 AM_MAINTAINER_MODE
 AM_CONDITIONAL(FSSTD, test x$enable_fsstd = xyes)
 AC_SUBST(USE_FSSTD)
@@ -20,25 +17,20 @@ else
   prefix=$prefix
 fi
 
-AM_CONFIG_HEADER(econfig.h)
+AM_CONFIG_HEADER(config.h)
 
-AC_DEFINE_UNQUOTED(ENLIGHTENMENT_VERSION, "$ENLIGHTENMENT_VERSION")
+AC_DEFINE_UNQUOTED(ENLIGHTENMENT_VERSION, "$ENLIGHTENMENT_VERSION", [Enlightenment version])
 AC_SUBST(ENLIGHTENMENT_VERSION)
-AC_DEFINE_UNQUOTED(ENLIGHTENMENT_MAJOR, "$ENLIGHTENMENT_MAJOR")
+AC_DEFINE_UNQUOTED(ENLIGHTENMENT_MAJOR, "$ENLIGHTENMENT_MAJOR", [Major Version])
 AC_SUBST(ENLIGHTENMENT_MAJOR)
-AC_DEFINE_UNQUOTED(ENLIGHTENMENT_MINOR, "$ENLIGHTENMENT_MINOR")
+AC_DEFINE_UNQUOTED(ENLIGHTENMENT_MINOR, "$ENLIGHTENMENT_MINOR", [Minor Version])
 AC_SUBST(ENLIGHTENMENT_MINOR)
-AC_DEFINE_UNQUOTED(ENLIGHTENMENT_MICRO, "$ENLIGHTENMENT_MICRO")
+AC_DEFINE_UNQUOTED(ENLIGHTENMENT_MICRO, "$ENLIGHTENMENT_MICRO", [Micro Version])
 AC_SUBST(ENLIGHTENMENT_MICRO)
 
 AC_SUBST(ENLIGHTENMENT_ROOT)
 AC_SUBST(ENLIGHTENMENT_BIN)
 AC_SUBST(LOCALEDIR)
-
-AC_DEFINE_UNQUOTED(PACKAGE,"$PACKAGE")
-AC_DEFINE_UNQUOTED(VERSION,"$VERSION")
-AC_SUBST(PACKAGE)
-AC_SUBST(VERSION)
 
 ALL_LINGUAS="de dk en_US es fr hu ko nl no ru sv pt pl pt_BR tr ja"
 
@@ -53,9 +45,8 @@ AC_HEADER_STDC
 AC_PATH_X
 AC_PATH_XTRA
 
-AC_CHECK_HEADER(stdarg.h, AC_DEFINE(HAVE_STDARGS))
-AC_CHECK_HEADER(X11/SM/SMlib.h, AC_DEFINE(HAVE_SM))
-AC_CHECK_HEADERS(alloca.h wctype.h)
+AC_CHECK_HEADERS(X11/SM/SMlib.h)
+AC_CHECK_HEADERS(alloca.h stdarg.h wctype.h)
 
 AC_TYPE_SIGNAL
 
@@ -87,9 +78,9 @@ AC_ARG_ENABLE(hints-gnome,
 AC_ARG_ENABLE(hints-kde,
   [  --enable-hints-kde      compile with KDE(<3.0) hints support [default=no]],, enable_hints_kde=no)
 
-if test "x$enable_hints_ewmh" = "xyes"; then AC_DEFINE(ENABLE_EWMH) fi
-if test "x$enable_hints_gnome" = "xyes"; then AC_DEFINE(ENABLE_GNOME) fi
-if test "x$enable_hints_kde" = "xyes"; then AC_DEFINE(ENABLE_KDE) fi
+if test "x$enable_hints_ewmh" = "xyes"; then AC_DEFINE(ENABLE_EWMH, 1, [Extended Window Manager Hints]) fi
+if test "x$enable_hints_gnome" = "xyes"; then AC_DEFINE(ENABLE_GNOME, 1, [GNOME(<2.0) Hints]) fi
+if test "x$enable_hints_kde" = "xyes"; then AC_DEFINE(ENABLE_KDE, 1, [KDE(<3.0) Hints]) fi
 AM_CONDITIONAL(ENABLE_EWMH, test "x$enable_hints_ewmh" = "xyes")
 AM_CONDITIONAL(ENABLE_GNOME, test "x$enable_hints_gnome" = "xyes")
 AM_CONDITIONAL(ENABLE_KDE, test "x$enable_hints_kde" = "xyes")
@@ -110,7 +101,7 @@ else
 fi
 
 if test "x$enable_sound" = "xyes"; then
-AM_PATH_ESD(0.2.17,AC_DEFINE(HAVE_LIBESD),[
+AM_PATH_ESD(0.2.17,AC_DEFINE(HAVE_LIBESD, 1, [libesd.so]),[
 echo "WARNING: Enlightenment needs a system with libesd.so (EsounD)"
 echo "0.2.17 or higher to use sound support."
 echo "Enlightenment can use EsounD (ESD) to be installed to compile."
@@ -151,7 +142,7 @@ AC_MSG_ERROR([Fatal Error: no Fnlib detected.])], $IMLIB_LIBS)
 AC_SUBST(FNLIB_LIBS)
 
 if test "x$enable_upgrade" = "xyes"; then
-AC_CHECK_LIB(ghttp, ghttp_uri_validate, [AC_DEFINE(AUTOUPGRADE) 
+AC_CHECK_LIB(ghttp, ghttp_uri_validate, [AC_DEFINE(AUTOUPGRADE, 1, [Automatic upgrading]) 
 GHTTP_LIBS=-lghttp] , [
 echo "Automatic Upgrades requires libghttp"
 AC_MSG_WARN([no libghttp detected.])
@@ -184,8 +175,8 @@ AC_SUBST(DL_LIBS)
 AC_CHECK_LIB(Xtst, XTestGrabControl, , , $X_LIBS)
 AC_CHECK_LIB(Xtst, XTestQueryExtension, XTST_LIBS=-lXtst, , $X_LIBS)
 AC_SUBST(XTST_LIBS)
-AC_CHECK_LIB(Xext, XkbQueryExtension, AC_DEFINE(WITH_TARTY_WARP), , $X_LIBS)
-AC_CHECK_LIB(Xinerama, XineramaQueryExtension, AC_DEFINE(HAS_XINERAMA)
+AC_CHECK_LIB(Xext, XkbQueryExtension, AC_DEFINE(WITH_TARTY_WARP, 1, [Tarty Warp]), , $X_LIBS)
+AC_CHECK_LIB(Xinerama, XineramaQueryExtension, AC_DEFINE(HAS_XINERAMA, 1, [Xinerama support])
 		XINERAMA_LIBS=-lXinerama
 		, ,$X_LIBS)
 
@@ -193,7 +184,7 @@ AC_ARG_ENABLE(zoom, [  --enable-zoom           compile with zoom support [defaul
 
 if test "x$enable_zoom" = "xyes"; then
 AC_CHECK_LIB(Xxf86vm, XF86VidModeQueryExtension,
-             AC_DEFINE(WITH_ZOOM)
+             AC_DEFINE(WITH_ZOOM, 1, [Zoom Support])
              XVM_LIBS=-lXxf86vm
              , , $X_LIBS)
 else
@@ -203,8 +194,6 @@ fi
 AC_SUBST(XVM_LIBS)
 AC_SUBST(XINERAMA_LIBS)
 AC_SUBST(XKB)
-AC_SUBST(ENLIGHTENMENT_ROOT)
-AC_SUBST(ENLIGHTENMENT_BIN)
 
 AC_CHECK_LIB(Fridge,mass_quantities_of_bass_ale)
 AC_CHECK_LIB(Fridge,mass_quantities_of_any_ale, , [
@@ -237,7 +226,4 @@ scripts/enlightenment.install
 po/Makefile.in
 intl/Makefile
 debian/Makefile
-],
-[
-cp econfig.h config.h
 ])
