@@ -1,10 +1,3 @@
-if FSSTD
-bindir = @bindir@
-ENLIGHTENMENT_ROOT=$(pkglibdir)
-else
-bindir=$(prefix)/enlightenment/bin
-ENLIGHTENMENT_ROOT=$(prefix)/enlightenment
-endif
 
 bin_PROGRAMS = eesh
 
@@ -24,15 +17,6 @@ LDADD = $(X_PRE_LIBS) $(X_LIBS) -lX11 $(X_EXTRA_LIBS) -lm
 INCLUDES=-I$(top_srcdir) $(IMLIB_CFLAGS) -I$(includedir) -I..
 
 DEFS=-DENLIGHTENMENT_ROOT=\"@ENLIGHTENMENT_ROOT@\"
-
-#install-exec-local:
-#	if [ x@USE_FSSTD@ = "xno" ]; then \
-#	  ../mkinstalldirs $(exec_prefix)/bin; \
-#	  for i in $(bin_PROGRAMS); do \
-#	    rm -f $(exec_prefix)/bin/$$i; \
-#	    $(LN_S) $(bindir)/$$i $(exec_prefix)/bin/$$i; \
-#	  done; \
-#	fi
 
 uninstall-local:
 	for i in $(bin_PROGRAMS); do \
